Header added and formatted to center

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<div class="header">
-  <h1>Kennard Elliott <br> 
-  <p>Web Developer</p> </h1>
-</div>
+	<title>Résumé</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+	<div class="container">
+		<header>
+			<div class="flex-container">
+				<div class="name">
+					<h1><center>Kennard Elliott</center></h1>			
+				
+					<h1><center>Web Developer/ System Analyst</center></h1>	
+				</div>
