--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Learn About Kennard Elliott</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -29,6 +29,7 @@
       <img class="contact" src="website.jpg" <p class = "info" ><a href="https://www.example.com">AllAboutMe.com</a></p>
 			</div>
 			<div>
+				<h2>Social Media</h2>
 				<img class="contact" src="instagram.jpg" <p class = "info" > <a href="https://https://www.instagram.com/kennardeee/">instagram.com/kennardeee</a></p>
       <img class="contact" src="facebook.jpg" <p class = "info" > <a href="https://https://m.facebook.com/kennard.elliott">facebook.com/kennard.elliott</a></p>
 				
