--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<h2>Biography</h2>
 			<div class="Biography">
 				
-				<p class="para">Kennard Elliott is  currently pursuing a bachelor of science (BSC.) in Information Technology at the University of the West Indies, Mona. Technology is rapily evolving 
+				<p class="para">Kennard Elliott is  currently pursuing a bachelor of science (BSC.) in Information Technology at the University of the West Indies, Mona. Technology is rapidly evolving 
 
 which make this field interesting and the reason I chose to venture in it. I plan to further my studies in Aviation after leaving univerity to see how I can better the field of 
 
@@ -57,7 +57,7 @@ aviation using Information Technology.</p>
 				</div>
 				<div>
 					<p><h3 class="title">Registrar and Sale Associate</h3>
-				At Sanmerna Paper Products</p></p>
+				At Sanmerna Paper Products</p>
 				</div>
 				
 			</div>
